--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/nodemailer-smtp-transport": "^2.7.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.8",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
