--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "dotenv": "^16.3.1",
+    "google-recaptcha": "^1.1.0",
     "next": "13.5.4",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "react": "^18",
